Fix QG: use Collections.toList()